clusters/managed/gaming/pterodactyl-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app pterodactyl
  namespace: mgd-gaming
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      hostAliases:
        - ip: "172.16.0.101"
          hostnames:
            - wings.trusted.nirmalhk7.com
      containers:
        - name: *app
          # renovate: depName=ghcr.io/pterodactyl/panel
          image: ghcr.io/pterodactyl/panel:latest
          ports:
            - containerPort: 80
              name: web
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /app/var/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pterodactyl-data
