clusters/managed/gaming/pterodactyl-panel/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    milano.app: *app
