clusters/managed/gaming/pterodactyl-panel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl
  namespace: mgd-gaming
  labels:
    milano.app: *app
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 31221
  selector:
    milano.app: *app
