clusters/managed/gaming/pterodactyl-panel/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app pterodactyl
  namespace: mgd-gaming
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://gaming.trusted.nirmalhk7.com"
    gethomepage.dev/group: Gaming
    gethomepage.dev/description: "Game server panel"
    gethomepage.dev/icon: pterodactyl
    gethomepage.dev/app: *app
    gethomepage.dev/name: Pterodactyl
    gethomepage.dev/weight: "10"
    gethomepage.dev/widget.type: pterodactyl
    gethomepage.dev/widget.url: "http://pterodactyl.mgd-gaming.svc.cluster.local"
    gethomepage.dev/widget.key: "${PTERODACTYL_API_KEY}"
    gethomepage.dev/pod-selector: "milano.app=pterodactyl"
  labels:
    milano.level: managed
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`gaming.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 80
